add jmods and a runtime